welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:30: error: object java.awt.Color is not a value
  			if (getCouleurSol()== Color){
                                              ^