welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
      while (!estSurBiscuit){
        if (isFacingTrail){
          baisseBrosse()
      		avance()
          leveBrosse()
    }
      
      	else {
          gauche()
        	if (!isFacingTrail){
            retourne()
            baisseBrosse()
            avance()
            leveBrosse()
          }
          baisseBrosse()
          avance()
          leveBrosse()
        }
          
    }
  prendBiscuit()
}

def isFacingTrail():Boolean = {
    if (!estFaceMur()){
      	avance()
  			if (getCouleurSol()== Color){
          recule()
          return true
        }
      	else {
          recule()
          return false
        }
     }
  return false
}